# visionclip

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC_V1.md  TESTING.md  package-lock.json  requirements.txt
.github/workflows/: ci.yml
animation/: code.html
apps/coddy/: Cargo.toml
apps/coddy-electron/: eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts
apps/coddy-electron/src/__tests__/application/: EventStreamer.test.ts
apps/coddy-electron/src/__tests__/domain/: policyEvaluator.test.ts  sessionReducer.test.ts  types.test.ts
apps/coddy-electron/src/__tests__/infrastructure/: ElectronReplIpcClient.test.ts  integration.test.ts
apps/coddy-electron/src/application/: CommandSender.ts  EventStreamer.ts  SessionManager.ts  SettingsStore.ts  index.ts
apps/coddy-electron/src/domain/: index.ts
apps/coddy-electron/src/domain/contracts/: ReplIpcClient.ts  index.ts
apps/coddy-electron/src/domain/reducers/: index.ts  policyEvaluator.ts  sessionReducer.ts
apps/coddy-electron/src/domain/types/: events.ts  index.ts  policy.ts  session.ts
apps/coddy-electron/src/infrastructure/ipc/: ElectronReplIpcClient.ts  globals.ts  index.ts
apps/coddy-electron/src/main/: ipcBridge.ts  main.ts  preload.ts
apps/coddy-electron/src/presentation/: App.tsx
apps/coddy-electron/src/presentation/components/: AssessmentConfirmModal.tsx  CodeBlock.tsx  ConversationPanel.tsx  FloatingSettingsModal.tsx  Icon.tsx  (+9 more)
apps/coddy-electron/src/renderer/: main.tsx  styles.css
apps/coddy/src/: config.rs  main.rs  shortcut.rs  voice_overlay.rs
apps/visionclip/: Cargo.toml
apps/visionclip-config/src/: main.rs
apps/visionclip-daemon/: Cargo.toml
apps/visionclip-daemon/src/: coddy_bridge.rs  coddy_contract.rs  linux_apps.rs  local_files.rs  main.rs  rendered_search.rs  search.rs
apps/visionclip/src/: capture.rs  doctor.rs  main.rs  search_overlay.rs  voice.rs  voice_overlay.rs
crates/coddy-client/: Cargo.toml
crates/coddy-client/src/: lib.rs
crates/coddy-core/: Cargo.toml
crates/coddy-core/src/: assessment.rs  command.rs  context.rs  event.rs  event_broker.rs  event_log.rs  lib.rs  policy.rs  search.rs  session.rs  shortcut.rs  voice_intent.rs
crates/coddy-core/tests/: contracts.rs
crates/coddy-ipc/: Cargo.toml
crates/coddy-ipc/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: actions.rs  agent.rs  audit.rs  capture_discovery.rs  config.rs  ipc.rs  language.rs  lib.rs  security.rs  session.rs  status.rs  tools.rs
crates/common/tests/: repository_boundaries.rs
crates/documents/: Cargo.toml
crates/documents/src/: lib.rs
crates/infer/src/: backend.rs  lib.rs  ollama.rs  postprocess.rs  prompts.rs  provider.rs
crates/output/src/: browser.rs  clipboard.rs  lib.rs
crates/search/: Cargo.toml
crates/search/src/: catalog.rs  config.rs  crawler.rs  jobs.rs  lib.rs  metrics.rs  schema.rs  security.rs  service.rs  watcher.rs
crates/search/src/extractors/: desktop_entry.rs  image_ocr.rs  markdown.rs  mod.rs  pdf_text.rs  text.rs
crates/search/src/index/: lancedb.rs  mod.rs  sqlite_vec.rs  tantivy_index.rs  vector_index.rs
crates/search/src/query/: mod.rs  parser.rs  ranker.rs  snippet.rs
crates/tts/src/: piper_http.rs
crates/voice-input/: Cargo.toml
crates/voice-input/src/: lib.rs
deploy/: install-user.sh
deploy/gnome-shell/visionclip-status@visionclip/: extension.js  metadata.json  stylesheet.css
deploy/systemd/: piper-http.service  visionclip-daemon.service  visionclip-wake-listener.service
docs/: IMPLEMENTATION_PLAN.md  agent-core-phase1.md  assistant-runtime-research-2026-05.md  assistant-systems-review-2026-05-03.md  coddy-architecture-diagram.html  document-runtime-phase1.md  repository-boundaries.md  search-subsystem.md
docs/repl/: README.md  architecture.md  assessment-assistant.md  backend-contracts.md  backend-next-steps.md  coddy-client.md  coddy-decoupling-plan.md  coddy-wire-contract.md  implementation-plan.md  quality-plan.md  research-notes.md  ui-ux-spec.md
docs/repl/openapi/: README.md  coddy-repl.openapi.yaml
examples/: config.toml
repl_ui/aether_terminal/: DESIGN.md
repl_ui/agentic_execution_mode/: code.html
repl_ui/configuration_settings_modal/: code.html
repl_ui/context_workspace/: code.html
repl_ui/floating_terminal_coding_interaction/: code.html
repl_ui/floating_terminal_model_selection/: code.html
repl_ui/local_model_manager/: code.html
repl_ui/repl_main_view/: code.html
scripts/: guard_no_secrets.sh  install_gnome_status_indicator.sh  install_gnome_voice_shortcut.sh  install_visionclip.sh  setup_voice_profile.sh  start_local_stack.sh  stop_local_stack.sh  test_tts_flows.sh  test_voice_profile_setup.sh
tools/: static_verify.py  visionclip-hybrid.toml
tools/stt/: faster_whisper_transcribe.py
visionclip/: .gitignore  Cargo.toml  README.md  SPEC_V1.md  TESTING.md
visionclip/apps/visionclip/: Cargo.toml
visionclip/apps/visionclip-config/: Cargo.toml
visionclip/apps/visionclip-config/src/: main.rs
visionclip/apps/visionclip-daemon/: Cargo.toml
visionclip/apps/visionclip-daemon/src/: linux_apps.rs  main.rs  search.rs
visionclip/apps/visionclip/src/: capture.rs  main.rs  voice.rs  voice_overlay.rs
visionclip/crates/common/: Cargo.toml
visionclip/crates/common/src/: actions.rs  config.rs  error.rs  intent.rs  ipc.rs  lib.rs  portal.rs  router.rs
visionclip/crates/infer/: Cargo.toml
visionclip/crates/infer/src/: backend.rs  ollama.rs  postprocess.rs  prompts.rs
visionclip/crates/output/: Cargo.toml
visionclip/crates/output/src/: browser.rs  lib.rs  notify.rs
visionclip/crates/tts/: Cargo.toml
visionclip/crates/tts/src/: lib.rs  piper_http.rs
visionclip/deploy/: install-user.sh
visionclip/deploy/systemd/: piper-http.service
visionclip/examples/: config.toml
visionclip/scripts/: install_gnome_voice_shortcut.sh  start_local_stack.sh
visionclip/tools/: visionclip-hybrid.toml
visionclip/tools/stt/: faster_whisper_transcribe.py
(+17 files in other folders)
