[workspace]
members = [
  "apps/visionclip",
  "apps/visionclip-daemon",
  "apps/visionclip-config",
  "crates/common",
  "crates/infer",
  "crates/output",
  "crates/tts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["R. Rodrigues <263508957+4ethyr@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1.0"
arboard = "3.4"
async-trait = "0.1"
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
which = "7.0"
