[package]
name = "coddy"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gtk-overlay = ["dep:gtk4"]

[dependencies]
visionclip-common = { path = "../../crates/common" }
anyhow.workspace = true
clap.workspace = true
gtk4 = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
