[package]
name = "coddy"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gtk-overlay = ["dep:gtk4"]

[dependencies]
coddy-client.workspace = true
coddy-core.workspace = true
coddy-ipc.workspace = true
visionclip-voice-input = { path = "../../crates/voice-input" }
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
gtk4 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
