[package]
name = "visionclip-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
coddy-protocol = []

[dependencies]
visionclip-common = { path = "../../crates/common" }
visionclip-infer = { path = "../../crates/infer" }
visionclip-output = { path = "../../crates/output" }
visionclip-tts = { path = "../../crates/tts" }
anyhow.workspace = true
bincode.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
which.workspace = true
uuid.workspace = true
