[package]
name = "visionclip"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gtk-overlay = ["dep:gtk4"]

[dependencies]
visionclip-common = { path = "../../crates/common" }
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
uuid.workspace = true
which.workspace = true
gtk4 = { workspace = true, optional = true }
