[package]
name = "visionclip-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
coddy-core.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
