[package]
name = "visionclip-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
