[package]
name = "visionclip-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
visionclip-common = { path = "../../crates/common" }
visionclip-infer = { path = "../../crates/infer" }
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
which.workspace = true
