[package]
name = "visionclip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
visionclip-common = { path = "../../crates/common" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
uuid.workspace = true
which.workspace = true
