[package]
name = "visionclip-tts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
visionclip-common = { path = "../common" }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
which.workspace = true

[dev-dependencies]
tokio.workspace = true
